--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,19 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // jdbc
+    implementation 'mysql:mysql-connector-java:8.0.28'
+
+    // mybatis
+    implementation 'org.mybatis:mybatis:3.5.6'
+
+    // lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    //jsoup 의존성 추가
+    implementation 'org.jsoup:jsoup:1.15.3'
 }
 
 test {
